# dcfs

./: .clangd  .gitignore  Makefile  README.md  memleaks  meson.build  meson.options
.cache/clangd/index/: api.c.9D0C4708968D5DC9.idx  api.h.48FB94E1C94F4996.idx  discord.c.960C4E0BD0936AC0.idx  discord.h.E7E281E8A9343CE7.idx  json.c.86F3CEEBFD9B4A9C.idx  json.h.94606ECA9BE1F157.idx  main.c.368E56E573020D99.idx  reader.c.4369FC8548698FE9.idx  request.c.41C34B06A5C179FD.idx  request.h.557C4ECC5DDE7686.idx  util.c.EC1AA67B46A1235F.idx  util.h.64EFD4E1EF5EB293.idx  writer.c.ECB20C7613D468EB.idx
lib/discord/: api.c  api.h  discord.c  discord.h  webhook.c  webhook.h
lib/json/: json.c  json.h  reader.c
src/: dcfs.c  fs.c  fs.h  main.c  request.c  request.h  util.c  util.h
src/discord/: discord.c  discord.h
src/json/: json.c  json.h  reader.c
